# cuda-time-travel

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
demo/: tt_cli.cpp  tt_demo.cpp  tt_demo_determinism.cu  tt_demo_graph.cu  tt_demo_graph_patch.cu  tt_demo_multistream_stress.cu  tt_demo_single.cu  tt_demo_verify.cpp
docs/: delta_format.md  determinism.md  graph_patching.md  graphs.md  multistream.md  ring_format.md  trace.md  verify.md
include/tt/: tt_cupti.h  tt_graph.h  tt_graph_patch.h  tt_layout.h  tt_trace.h  ttrecorder.h
src/: tt_cupti.cpp  tt_graph.cpp  tt_trace.cpp  tt_verify.cu  ttrecorder.cpp  ttrecorder.cu
tests/: tt_tests.cpp  tt_tests.cu
